# HACK_EUROPE_LONDON

./: .gitignore  Makefile  README.md
apps/: NEXT_STEPS.md
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: env_loader.py  errors.py  logging_config.py  main.py  models.py  store.py
apps/api/app/integrations/: mcp-config.json  mcp.py
apps/api/app/persistence/: sqlite_store.py
apps/api/app/routers/: copilot.py  graphs.py  integrations.py  repos.py
apps/api/app/services/: analysis.py  codewords_client.py  dust_client.py  gemini_client.py  ingestion.py  jobs.py  migration_blueprint.py  python_ast.py  semantic.py
apps/api/tests/: test_api.py  test_ingestion.py  test_semantic.py
apps/web/: .env.example  LOVABLE_HANDOFF.md  index.html  lovable_prompt.txt  package-lock.json  package.json  tsconfig.json
apps/web/src/: App.tsx  styles.css
apps/web/src/components/: CopilotPanel.tsx  GraphCanvas.tsx  GraphPanel.tsx  RepoIntakePanel.tsx  RiskPanel.tsx
apps/web/src/lib/: api.ts
dust-integration/: SKILL.md
dust-integration/agents/: openai.yaml
dust-integration/references/: mcp-config.json
legacy-atlas-plan/: 01-strategy-and-decisions.md  02-architecture-and-data-model.md  03-delivery-roadmap.md  04-ui-excellence-system.md  05-tool-playbooks.md  06-testing-and-demo.md  07-master-prompts.md  08-collaboration-build-guidelines.md  10-software-overview-and-technical-documentation.md  11-backend-feature-and-terms-reference.md  README.md
